clusternetworkpolicy-for-application/ingress-http-proxy-cnp.yaml
apiVersion: security.antrea.tanzu.vmware.com/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: ingress-http-proxy
spec:
    priority: 100
    tier: Platform
    appliedTo:
      - podSelector:
          matchLabels:
            ingress-http: proxy
    egress:
      - action: Allow
        to:
          - podSelector:
              matchLabels:
                ingress-http: target
        ports:
          - protocol: TCP
            port: http
