clusternetworkpolicy-for-application/student-client-cnp.yml
apiVersion: security.antrea.tanzu.vmware.com/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: student-api-client
spec:
    priority: 100
    tier: Application    
    appliedTo:
      - podSelector:
          matchLabels:
            student: client
    egress:
      - action: Allow
        to:
          - podSelector:
              matchLabels:
                student: api
        ports:
          - protocol: TCP
            port: http
